dirctory pg addition

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 <button class="filterButton" id="filter-cse">CSE Courses</button>
             </div>
             <div id="certificate-container"></div>
+            <div id="total-credits-container"></div>
         </section>
     
     </main>
