--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -21,10 +21,10 @@
 
         <nav id="page-nav">
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
-                <li><a href="#">Join</a></li>
-                <li><a href="#">Discover</a></li>
+                <li><a href="join.html">Join</a></li>
+                <li><a href="discover.html">Discover</a></li>
             </ul>
         </nav>
         <img id="dark-mode-toggle" src="images/dark-theme-button.svg" alt="Toggle dark mode">
