--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,10 +22,10 @@
         <nav id="page-nav">
             <ul>
                 <li>
-                    <a href="home.html">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="directory.html">Directory</a>
-                    <a href="#">Join</a>
-                    <a href="#">Discover</a>       
+                    <a href="join.html">Join</a>
+                    <a href="discover.html">Discover</a>       
                 </li>
             </ul>
         </nav>
