favicon and meta data

--- a/finalproject/checkout.html
+++ b/finalproject/checkout.html
@@ -3,8 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="WDD231 - Web Frontend Development - Final Project">
+    <meta name="author" content="Reese Blignaut" >
+    <meta property="og:title" content="JRLT E-Commerce Site" >
+    <meta property="og:type" content="website" >
+    <meta property="og:url" content="https://reese1456.github.io/wdd231/finalproject" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout - JRLT E‑Commerce Site</title>
+
+    <link rel="icon" type="image/x-icon" href="images/JRLT-favicon.svg">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/styles-large.css" media="(min-width: 768px)">
     <script src="scripts/scripts.js" defer></script>
